Fix footer text alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -252,4 +252,7 @@ html {
     margin-top: 0.5rem;
   }
 
+  .footer .contents {
+    text-align: center;
+  }
 }
